# ytlc

./: .env.example  .envrc.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
apps/cli/: main.py
apps/cli/parser/: __init__.py  parser.py
apps/web/: README.md  app.py
apps/web/static/: README.md
apps/web/templates/: base.html  video.html
docs/: stats-improvement-plan.md
misc/: createdb.sh  init.sql
parser/: __init__.py  parser.py
saved_queries/: channel_id_sha256sum.sql  members_videos.sql  unlisted_videos.sql
scripts/: setup-db.sh
src/: main.rs  parser.rs  search.rs  stats.rs
web/: README.md  app.py
web/static/: README.md
web/static/css/: style.css
web/static/js/: app.js
web/templates/: index.html  video.html
