[package]
name = "ytlc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ytlc"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4", features = ["derive", "env"] }
regex = "1"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
termimad = "0.23"
walkdir = "2"
comrak = "0.54.0"
